k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: customer1
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:16-alpine
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-storage
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: customer1
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: customer2
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:16-alpine
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-storage
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: customer2
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
